--- a/Bipeople/Bipeople/History.storyboard
+++ b/Bipeople/Bipeople/History.storyboard
@@ -85,10 +85,10 @@
             </objects>
             <point key="canvasLocation" x="1845.5999999999999" y="1311.9940029985009"/>
         </scene>
-        <!--Data Source-->
+        <!--History Chart-->
         <scene sceneID="Ta9-0N-8XF">
             <objects>
-                <viewController id="rBX-VJ-YkM" customClass="HistoryChartViewController" customModule="Bipeople" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="rBX-VJ-YkM" userLabel="History Chart" customClass="HistoryChartViewController" customModule="Bipeople" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="I5j-mX-oeS"/>
                         <viewControllerLayoutGuide type="bottom" id="aLi-c2-5Co"/>
@@ -98,17 +98,17 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="8cM-zC-Fsa">
-                                <rect key="frame" x="92" y="124" width="191" height="29"/>
+                                <rect key="frame" x="92" y="84" width="191" height="29"/>
                                 <segments>
                                     <segment title="daily"/>
                                     <segment title="weekly"/>
                                     <segment title="monthly"/>
                                 </segments>
                             </segmentedControl>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wcW-aI-mFE" userLabel="Chart">
-                                <rect key="frame" x="16" y="188.5" width="343" height="320"/>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wcW-aI-mFE" userLabel="Graph" customClass="ScrollableGraphView" customModule="ScrollableGraphView">
+                                <rect key="frame" x="16" y="148.5" width="343" height="320"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NNG-aQ-p1g" userLabel="Calendar" customClass="FSCalendar">
+                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NNG-aQ-p1g" userLabel="Calendar" customClass="FSCalendar">
                                         <rect key="frame" x="0.0" y="0.0" width="343" height="320"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <userDefinedRuntimeAttributes>
@@ -137,7 +137,7 @@
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h7T-SQ-fSD" customClass="CardView" customModule="Bipeople" customModuleProvider="target">
-                                <rect key="frame" x="16" y="524.5" width="343" height="133.5"/>
+                                <rect key="frame" x="16" y="484.5" width="343" height="133.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="X4R-i8-r9O">
                                         <rect key="frame" x="8" y="14" width="103" height="106.5"/>
@@ -211,7 +211,7 @@
                                 </constraints>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="FsU-sR-QDa">
-                                <rect key="frame" x="57" y="160" width="262" height="20.5"/>
+                                <rect key="frame" x="57" y="120" width="262" height="20.5"/>
                                 <subviews>
                                     <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="17-08-09" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mdX-n4-4LX" userLabel="Start Label">
                                         <rect key="frame" x="0.0" y="0.0" width="74" height="20.5"/>
@@ -257,8 +257,9 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="calendar" destination="NNG-aQ-p1g" id="dOy-65-5tH"/>
+                        <outlet property="calendarView" destination="NNG-aQ-p1g" id="Dnl-F4-PDa"/>
                         <outlet property="endLabel" destination="6x5-Lp-7sU" id="tWp-qC-5Jl"/>
+                        <outlet property="graphView" destination="wcW-aI-mFE" id="eVZ-N9-vWy"/>
                         <outlet property="startLabel" destination="mdX-n4-4LX" id="RNH-P7-zsH"/>
                     </connections>
                 </viewController>
@@ -276,10 +277,10 @@
             </objects>
             <point key="canvasLocation" x="2908" y="781.25937031484261"/>
         </scene>
-        <!--History Detail View Controller-->
+        <!--History Detail-->
         <scene sceneID="YRH-eu-dXH">
             <objects>
-                <viewController storyboardIdentifier="HistoryDetailViewController" id="0J0-6S-UEE" customClass="HistoryDetailViewController" customModule="Bipeople" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HistoryDetailViewController" id="0J0-6S-UEE" userLabel="History Detail" customClass="HistoryDetailViewController" customModule="Bipeople" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="pX7-EI-3Ey"/>
                         <viewControllerLayoutGuide type="bottom" id="quY-DG-fPo"/>
