--- a/Bipeople/Bipeople/Base.lproj/Navigation.storyboard
+++ b/Bipeople/Bipeople/Base.lproj/Navigation.storyboard
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13168.3" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="87z-fg-L60">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13178.6" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="87z-fg-L60">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13147.4"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13156.2"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -16,7 +15,7 @@
                     <tabBarItem key="tabBarItem" title="Item" id="2Bs-XG-aqc"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="2jk-BX-eaE">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
@@ -28,7 +27,7 @@
             </objects>
             <point key="canvasLocation" x="790" y="815"/>
         </scene>
-        <!--Bi People Navigation View Controller-->
+        <!--TITLE-->
         <scene sceneID="Su5-lI-4JI">
             <objects>
                 <viewController id="MC0-9L-o62" customClass="BiPeopleNavigationViewController" customModule="Bipeople" customModuleProvider="target" sceneMemberID="viewController">
@@ -39,9 +38,37 @@
                     <view key="view" contentMode="scaleToFill" id="yJC-rw-kB1">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Nhe-9Y-JBH">
+                                <rect key="frame" x="309" y="539" width="58" height="58"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="58" id="9CT-Pp-CNx"/>
+                                    <constraint firstAttribute="height" constant="58" id="HOO-XT-8RK"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="didTapStartButton" destination="MC0-9L-o62" eventType="touchUpInside" id="uqI-0j-kgM"/>
+                                </connections>
+                            </button>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="XbL-LW-ZKV" firstAttribute="top" secondItem="Nhe-9Y-JBH" secondAttribute="bottom" constant="70" id="QPD-de-EeN"/>
+                            <constraint firstAttribute="trailing" secondItem="Nhe-9Y-JBH" secondAttribute="trailing" constant="8" id="uxV-Pl-alg"/>
+                        </constraints>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="boolean" keyPath="keyPath" value="YES"/>
+                        </userDefinedRuntimeAttributes>
                     </view>
-                    <navigationItem key="navigationItem" id="cHY-bb-SJt"/>
+                    <navigationItem key="navigationItem" title="TITLE" id="cHY-bb-SJt">
+                        <barButtonItem key="leftBarButtonItem" title="Cancel" id="PmP-QK-R8S"/>
+                        <barButtonItem key="rightBarButtonItem" title="Done" id="B5E-8w-wya"/>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="cancelButton" destination="PmP-QK-R8S" id="zWS-my-ZKW"/>
+                        <outlet property="doneButton" destination="B5E-8w-wya" id="7i8-g3-5ug"/>
+                        <outlet property="startButton" destination="Nhe-9Y-JBH" id="ywH-jw-Cbi"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="UQF-lg-G2n" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
