--- a/Bipeople/Bipeople/Base.lproj/History.storyboard
+++ b/Bipeople/Bipeople/Base.lproj/History.storyboard
@@ -111,14 +111,23 @@
                                 </connections>
                             </segmentedControl>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mjy-SM-4kU" userLabel="Container">
-                                <rect key="frame" x="16" y="146" width="343" height="320"/>
+                                <rect key="frame" x="16" y="146" width="343" height="333.5"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wcW-aI-mFE" userLabel="Graph" customClass="ScrollableGraphView" customModule="ScrollableGraphView">
-                                        <rect key="frame" x="0.0" y="0.0" width="343" height="320"/>
+                                    <label opaque="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Filter" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="baD-OY-PGM" userLabel="Filter">
+                                        <rect key="frame" x="298.5" y="0.0" width="34.5" height="18"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="15"/>
+                                        <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                        <connections>
+                                            <outletCollection property="gestureRecognizers" destination="cJs-1k-7cL" appends="YES" id="dcA-jy-Zb0"/>
+                                        </connections>
+                                    </label>
+                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wcW-aI-mFE" userLabel="Graph" customClass="ScrollableGraphView" customModule="ScrollableGraphView">
+                                        <rect key="frame" x="0.0" y="20" width="343" height="313.5"/>
                                         <color key="backgroundColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NNG-aQ-p1g" userLabel="Calendar" customClass="FSCalendar">
-                                        <rect key="frame" x="0.0" y="0.0" width="343" height="320"/>
+                                    <view hidden="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NNG-aQ-p1g" userLabel="Calendar" customClass="FSCalendar">
+                                        <rect key="frame" x="0.0" y="20" width="343" height="313.5"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <userDefinedRuntimeAttributes>
                                             <userDefinedRuntimeAttribute type="color" keyPath="headerTitleColor">
@@ -139,17 +148,19 @@
                                 </subviews>
                                 <constraints>
                                     <constraint firstItem="NNG-aQ-p1g" firstAttribute="leading" secondItem="mjy-SM-4kU" secondAttribute="leading" id="0V4-3d-QIZ"/>
-                                    <constraint firstAttribute="trailing" secondItem="wcW-aI-mFE" secondAttribute="trailing" id="HTG-0h-R50"/>
+                                    <constraint firstAttribute="trailing" secondItem="baD-OY-PGM" secondAttribute="trailing" constant="10" id="9Ag-nM-rJg"/>
+                                    <constraint firstAttribute="bottom" secondItem="wcW-aI-mFE" secondAttribute="bottom" id="Da2-xs-Kqk"/>
+                                    <constraint firstItem="wcW-aI-mFE" firstAttribute="leading" secondItem="mjy-SM-4kU" secondAttribute="leading" id="LLg-V0-rDn"/>
+                                    <constraint firstItem="wcW-aI-mFE" firstAttribute="top" secondItem="mjy-SM-4kU" secondAttribute="top" constant="20" id="NPE-hn-v3i"/>
                                     <constraint firstAttribute="trailing" secondItem="NNG-aQ-p1g" secondAttribute="trailing" id="Ohc-bn-N2M"/>
-                                    <constraint firstItem="NNG-aQ-p1g" firstAttribute="top" secondItem="mjy-SM-4kU" secondAttribute="top" id="dFz-CZ-Cav"/>
-                                    <constraint firstAttribute="bottom" secondItem="wcW-aI-mFE" secondAttribute="bottom" id="nse-De-fqf"/>
-                                    <constraint firstItem="wcW-aI-mFE" firstAttribute="top" secondItem="mjy-SM-4kU" secondAttribute="top" id="rmu-9I-tUX"/>
+                                    <constraint firstItem="NNG-aQ-p1g" firstAttribute="top" secondItem="mjy-SM-4kU" secondAttribute="top" constant="20" id="dFz-CZ-Cav"/>
+                                    <constraint firstAttribute="trailing" secondItem="wcW-aI-mFE" secondAttribute="trailing" id="hVn-dx-fVE"/>
                                     <constraint firstAttribute="bottom" secondItem="NNG-aQ-p1g" secondAttribute="bottom" id="u1z-HG-qMC"/>
-                                    <constraint firstItem="wcW-aI-mFE" firstAttribute="leading" secondItem="mjy-SM-4kU" secondAttribute="leading" id="vAv-QN-ngO"/>
+                                    <constraint firstItem="baD-OY-PGM" firstAttribute="top" secondItem="mjy-SM-4kU" secondAttribute="top" id="zlU-Y5-Qra"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="h7T-SQ-fSD" customClass="CardView" customModule="Bipeople" customModuleProvider="target">
-                                <rect key="frame" x="16" y="482" width="343" height="133.5"/>
+                                <rect key="frame" x="16" y="495.5" width="343" height="133.5"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" alignment="top" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="X4R-i8-r9O">
                                         <rect key="frame" x="8" y="14" width="103" height="106.5"/>
@@ -259,7 +270,7 @@
                             <constraint firstItem="h7T-SQ-fSD" firstAttribute="top" secondItem="mjy-SM-4kU" secondAttribute="bottom" constant="16" id="Gfr-a7-Hhk"/>
                             <constraint firstItem="8cM-zC-Fsa" firstAttribute="top" secondItem="I5j-mX-oeS" secondAttribute="bottom" constant="20" id="Kn4-Fe-dgV"/>
                             <constraint firstItem="8cM-zC-Fsa" firstAttribute="centerX" secondItem="KMo-Zf-rbb" secondAttribute="centerX" id="Nei-rv-cKV"/>
-                            <constraint firstItem="mjy-SM-4kU" firstAttribute="height" secondItem="KMo-Zf-rbb" secondAttribute="height" multiplier="0.48" id="QNp-62-pCU"/>
+                            <constraint firstItem="mjy-SM-4kU" firstAttribute="height" secondItem="KMo-Zf-rbb" secondAttribute="height" multiplier="0.5" id="QNp-62-pCU"/>
                             <constraint firstItem="FsU-sR-QDa" firstAttribute="centerX" secondItem="KMo-Zf-rbb" secondAttribute="centerX" id="SAC-LO-Vho"/>
                             <constraint firstItem="mjy-SM-4kU" firstAttribute="trailing" secondItem="KMo-Zf-rbb" secondAttribute="trailingMargin" id="Tka-Q4-RX0"/>
                             <constraint firstItem="FsU-sR-QDa" firstAttribute="top" secondItem="8cM-zC-Fsa" secondAttribute="bottom" constant="8" id="bpR-Ie-nvU"/>
@@ -272,12 +283,18 @@
                         <outlet property="calendarView" destination="NNG-aQ-p1g" id="X5u-tt-n3X"/>
                         <outlet property="containerView" destination="mjy-SM-4kU" id="1ty-4U-x9U"/>
                         <outlet property="endLabel" destination="6x5-Lp-7sU" id="tWp-qC-5Jl"/>
+                        <outlet property="filterLabel" destination="baD-OY-PGM" id="suM-h0-zdX"/>
                         <outlet property="prototypeGraphView" destination="wcW-aI-mFE" id="aF5-bZ-FFj"/>
                         <outlet property="segmentedControl" destination="8cM-zC-Fsa" id="7gc-TR-W0V"/>
                         <outlet property="startLabel" destination="mdX-n4-4LX" id="RNH-P7-zsH"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="eob-kC-nO5" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <tapGestureRecognizer id="cJs-1k-7cL">
+                    <connections>
+                        <action selector="didTapFilterLabel:" destination="rBX-VJ-YkM" id="Kfp-o0-Uvb"/>
+                    </connections>
+                </tapGestureRecognizer>
                 <tapGestureRecognizer id="NoW-Yc-JUu">
                     <connections>
                         <action selector="didTapStartLabel:" destination="rBX-VJ-YkM" id="3q1-Ko-Lpe"/>
