--- a/Bipeople/Bipeople/Base.lproj/History.storyboard
+++ b/Bipeople/Bipeople/Base.lproj/History.storyboard
@@ -279,11 +279,15 @@
                         </constraints>
                     </view>
                     <connections>
+                        <outlet property="averageSpeedLabel" destination="LkZ-TV-FZh" id="K6c-A6-678"/>
                         <outlet property="calendarView" destination="NNG-aQ-p1g" id="X5u-tt-n3X"/>
+                        <outlet property="caloriesLabel" destination="xN6-6b-JjU" id="3BM-tm-Qix"/>
                         <outlet property="containerView" destination="mjy-SM-4kU" id="1ty-4U-x9U"/>
+                        <outlet property="distanceLabel" destination="XBm-Qs-26z" id="hJ0-IQ-8vY"/>
                         <outlet property="endLabel" destination="6x5-Lp-7sU" id="tWp-qC-5Jl"/>
                         <outlet property="filterLabel" destination="baD-OY-PGM" id="suM-h0-zdX"/>
                         <outlet property="prototypeGraphView" destination="wcW-aI-mFE" id="aF5-bZ-FFj"/>
+                        <outlet property="ridingTimeLabel" destination="P5q-9v-qjC" id="YBu-BV-7Dn"/>
                         <outlet property="segmentedControl" destination="8cM-zC-Fsa" id="7gc-TR-W0V"/>
                         <outlet property="startLabel" destination="mdX-n4-4LX" id="RNH-P7-zsH"/>
                     </connections>
